[gd_scene load_steps=7 format=2]

[ext_resource path="res://clowni2.png" type="Texture" id=1]
[ext_resource path="res://clowni1.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "kurwa",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 497, 278 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "kurwa"

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DashCoolDownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.2, 1.2 )
limit_left = 0
limit_top = 0
limit_right = 1800
limit_bottom = 1200
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 3.0
editor_draw_limits = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
